snapshots/syntax/statements/objects/mod/with_statement_with_if.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WithStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WithKeyword
                  text: With
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: obj
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: IfKeyword
                          text: If
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: PeriodOperator
                              text: "."
                        - kind: Identifier
                          text: IsValid
                        - kind: Whitespace
                          text: " "
                        - kind: ThenKeyword
                          text: Then
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "            "
                    - kind: Unknown
                      text: "."
                    - kind: CallStatement
                      children:
                        - kind: Identifier
                          text: Process
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "        "
                    - kind: Unknown
                      text: End
                    - kind: IfStatement
                      children:
                        - kind: Whitespace
                          text: " "
                        - kind: IfKeyword
                          text: If
                        - kind: IdentifierExpression
                          children:
                            - kind: Newline
                              text: "\n"
                        - kind: Whitespace
                          text: "    "
                        - kind: EndKeyword
                          text: End
                        - kind: WithStatement
                          children:
                            - kind: Whitespace
                              text: " "
                            - kind: WithKeyword
                              text: With
                            - kind: Newline
                              text: "\n"
                            - kind: StatementList
                              children:
                                - kind: Unknown
                                  text: End
                                - kind: Whitespace
                                  text: " "
                                - kind: Unknown
                                  text: Sub
                                - kind: Newline
                                  text: "\n"
